Fixed surname not showing

--- a/templates/student.html
+++ b/templates/student.html
@@ -29,7 +29,7 @@
         <ul class="list-group">
           <li class="list-group-item">First name: {{s.fname}}</li>
           <li class="list-group-item">Middle name: {{s.mname}}</li>
-          <li class="list-group-item">Surname: {{s.sname}}</li>
+          <li class="list-group-item">Surname: {{s.lname}}</li>
           <li class="list-group-item">Extension name: {{s.ename}}</li>
           <li class="list-group-item">Email: {{s.email}}</li>
           <li class="list-group-item">Phone number: {{s.cpnum}}</li>
