added view dept, camp, and course in student.html

--- a/templates/student.html
+++ b/templates/student.html
@@ -31,6 +31,9 @@
           <li class="list-group-item">Middle name: {{s.mname}}</li>
           <li class="list-group-item">Surname: {{s.lname}}</li>
           <li class="list-group-item">Extension name: {{s.ename}}</li>
+          <li class="list-group-item">Campus: {{s.camp}}</li>
+          <li class="list-group-item">Deparment: {{s.dept}}</li>
+          <li class="list-group-item">Course: {{s.course}}</li>
           <li class="list-group-item">Email: {{s.email}}</li>
           <li class="list-group-item">Phone number: {{s.cpnum}}</li>
           <li class="list-group-item">Landline: {{s.llnum}}</li>
